<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center_horizontal">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/welcome"
		android:gravity="center" />

	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_marginTop="10sp" >

		<TableRow
		    android:id="@+id/dealerCards"
		    android:gravity="center"
		    android:minHeight="50sp" >

		</TableRow>
	</TableLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical|center_horizontal" >

		<Button
		    android:id="@+id/dealButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/dealButton" 
		    android:layout_gravity="center_horizontal"
		    android:onClick="dealButtonPressed"/>

		<TextView
		    android:id="@+id/potLabel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:gravity="center_vertical"
		    android:paddingTop="10dp"
		    android:text="@string/playerPot" />

		<EditText
		    android:id="@+id/potField"
		    android:layout_width="60dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:clickable="false"
		    android:focusable="false"
		    android:focusableInTouchMode="false"
		    android:inputType="text" >

		    <requestFocus />
		</EditText>

	</LinearLayout>

	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TableRow
	        android:id="@+id/playerCards"
	        android:layout_width="wrap_content"
	        android:gravity="center_horizontal" >

	    </TableRow>
	</TableLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal" >

		<Button
		    android:id="@+id/hitButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:text="@string/hitButton" />

		<Button
		    android:id="@+id/stayButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:text="@string/stayButton" />

	</LinearLayout>

</LinearLayout>